more tmux and scripts

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,36 +1,29 @@
 # TMUX configuration
 
-# set up the fish shell
-if-shell -b '[ -f /opt/homebrew/bin/fish ]'\
-  'set-option -g default-shell "/opt/homebrew/bin/fish"'
-if-shell -b '[ -f /usr/local/bin/fish ]'\
-  'set-option -g default-shell "/usr/local/bin/fish"'
-
-set-option -sa terminal-features ',ghostty:RGB'
-
 # use C-s, since it's on the home row and easier to hit than C-b
 set -g prefix C-s
 unbind-key C-s
 bind-key C-s send-prefix
 
-# if last pane is closed, change to another session instead of detaching
-set-option -g detach-on-destroy off
+# vi by default when $EDITOR contains 'vi'
+# set -w -g mode-keys vi
 
-# vi is good
-set -w -g mode-keys vi
-
-set -g focus-events on
-
-set -g base-index 0
-
+# allow mouse events
 set -g mouse on
 
-set -w -g aggressive-resize on
+# show statusbar
+set -g status on
 
+# change to most recent session instead of detaching tmux on session destroy
+# set -g detach-on-destroy off
+
+# allow focus events to pass through tmux
+set -g focus-events on
+
+# on a window close, renumber the remaining base on base-index
 set -g renumber-windows on
 
 set -sg escape-time 0
-
 set -g repeat-time 0
 
 set -g set-titles off #on
@@ -50,19 +43,11 @@ set -g history-limit 50000
 
 # set -g lock-after-time 0
 # set -g lock-command ""
-# set -g monitor-silence 0
-# set -g visual-silence off
-# set -g alert-silence clock
-# set -g silence-action current
-# set -g visual-bell off
-
-# show statusbar
-set -g status on
-
-set -g popup-border-lines none
 
 set -g pane-active-border-style bg=default,fg=color0
 set -g pane-border-style fg=color0
+
+set -g popup-border-lines none
 
 # name every tab as current directoy
 set -g automatic-rename-format '#{b:pane_current_path}'
@@ -70,11 +55,9 @@ set -g automatic-rename-format '#{b:pane_current_path}'
 set -w -g clock-mode-colour green
 
 set -g status-interval 1
-set -g status-fg default
 set -g status-position bottom #bottom #top
 set -g status-justify left
-set -g status-style bg=default
-set -g status-style fg=colour7
+set -g status-style "bg=default fg=colour7"
 set -g status-left " "
 set -g status-right-length 100
 set -g status-right "#[fg=colour7]#[bg=default] #(~/.config/scripts/battery.sh) "
@@ -83,48 +66,62 @@ set -g status-right "#[fg=colour7]#[bg=default] #(~/.config/scripts/battery.sh) 
 set -g window-status-current-format "#[fg=white]#[bg=default]#W"
 set -g window-status-format "#[bg=default]#[fg=color240]#W"
 
+# Rather than constraining window size to the maximum size of any client
+# connected to the *session*, constrain window size to the maximum size of any
+# client connected to *that window*. Much more reasonable.
+# Combined with using `tmux new-session -t alreadyExistingSessionName -s newSessionName`
+# we can have two views into the same session viewing different windows
+set -w -g aggressive-resize on
+
+
+bind r refresh-client; display-message "client reloaded."
+bind R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+
 # toggle statusbar
-bind C-b set-option -g status
+bind C-b set status
 
 # show current pane tty
 bind Y display-message "#{pane_tty}"
 
+# show pane num
 bind q display-panes
 
 # Avoid delete window/pane confirmation
-unbind -n M-x
+unbind -n M-x # dangerously close to M-z
 bind -n M-d confirm-before -p "kill-pane #P? (y/n)" kill-pane
 
 # Choose tmux paste buffer
 bind * choose-buffer
-bind P paste-buffer
+
+# Rename session
+bind-key . command-prompt -p "Session name:" "rename-session '%%'"
 
 # Swap window positon to the left/right
 bind < run-shell 'tmux swap-window -t -1 \; select-window -t -1'
 bind > run-shell 'tmux swap-window -t +1 \; select-window -t +1'
 
+# open man in h split
 bind / command-prompt "split-window 'exec man %%'"
+
+# quick ssh in new window
 bind S command-prompt "new-window -n %1 'ssh %1'"
 
 # synchronize all panes in a window
 bind y setw synchronize-panes
 
-bind : command-prompt
-bind r refresh-client; display-message "client reloaded."
-bind R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
-
 # bind-key enter next-layout
 bind space next-window
 bind bspace previous-window
+
 # default ones but slightly resized
 bind M-3 select-layout "e977,201x56,0,0[201x9,0,0,55,201x46,0,10{100x46,0,10,54,100x46,101,10,53}]"
 bind M-4 select-layout "3a2c,201x56,0,0{108x56,0,0,6,92x56,109,0[92x42,109,0,0,92x13,109,43,5]}"
 bind M-5 select-layout "9c2b,201x56,0,0[201x44,0,0{100x44,0,0,65,100x44,101,0,68},201x11,0,45,66]"
 
-# zoomig into a new window and back
-unbind M-z
+# zoomig in/out
 bind -n M-z resize-pane -Z
 
+# vim like pane splits
 unbind l
 unbind '"'
 unbind %
@@ -138,6 +135,11 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+bind -n S-Left  resize-pane -L 10
+bind -n S-Right resize-pane -R 10
+bind -n S-Up    resize-pane -U 10
+bind -n S-Down  resize-pane -D 10
 
 # Vim keys to selec panes
 bind h select-pane -L
@@ -154,32 +156,22 @@ bind -n M-j if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
 bind -n M-k if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
 bind -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 
-bind -T copy-mode-vi 'C-h' select-pane -L
-bind -T copy-mode-vi 'C-j' select-pane -D
-bind -T copy-mode-vi 'C-k' select-pane -U
-bind -T copy-mode-vi 'C-l' select-pane -R
-bind -T copy-mode-vi 'C-\' select-pane -l
-
 # Setup 'v' to begin selection as in Vim
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection
-bind -T copy-mode-vi r send-keys -X rectangle-toggle
 bind -T copy-mode-vi 'C-v' send -X begin-selection \; send -X rectangle-toggle
 
-bind -n S-Left set-option -g status-position top
-bind -n S-Right set-option -g status-position bottom
-
-# Don't exit copy mode on double or triple click.
-bind -T copy-mode-vi DoubleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-word"
-bind -T copy-mode-vi TripleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-line"
-bind -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-no-clear pbcopy
-# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-no-clear pbcopy
-unbind -T copy-mode-vi MouseDragEnd1Pane
+bind -n S-Left resize-pane -L 10
+bind -n S-Right resize-pane -R 10
+bind -n S-Up resize-pane -U 10
+bind -n S-Down resize-pane -D 10
 
 # send current pane to another window
 bind £ choose-tree -Zw "join-pane -t '%%'"
-# bring select pane to current window
+# bring selected pane to current window
 bind @ choose-tree -Zw "join-pane -s '%%'"
+
+# popups
 
 # toggle basic popup with "org" session
 bind C-n if-shell -F '#{==:#{session_name},org}' {
@@ -206,7 +198,6 @@ bind C-p if-shell -F '#{==:#{session_name},scratch}' {
 # bind-key A display-popup -d '#{pane_current_path}' -xC -yC -w 80% -h 80% -E "htop"
 
 # capture content of pane |> filter |> fzf |> action
-# tmux capture-pane -J -p |
-#     grep -oE '(https?|ftp|file):/?//[-A-Za-z0-9+&@#/%?=~_|!:,.;]*[-A-Za-z0-9+&@#/%=~_|]' |
-#     sort -u | fzf-tmux --prompt "Select URL: " | xargs open
+bind-key C-u run-shell -b "bash ${HOME}/.config/scripts/fzf-urls"
+# bind-key C-u run-shell -b "tmux capture-pane -J -p | grep -oE '(https?):\/\/.*[^>]' | fzf-tmux -d20 --multi --bind alt-a:select-all,alt-d:deselect-all | xargs open"
 
