--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,6 +21,7 @@ set -g status on
 set -g focus-events on
 
 # on a window close, renumber the remaining base on base-index
+set -g base-index 1
 set -g renumber-windows on
 
 set -sg escape-time 0
@@ -47,7 +48,7 @@ set -g history-limit 50000
 set -g pane-active-border-style bg=default,fg=color0
 set -g pane-border-style fg=color0
 
-set -g popup-border-lines none
+set -g popup-border-lines single
 
 # name every tab as current directoy
 set -g automatic-rename-format '#{b:pane_current_path}'
@@ -192,7 +193,7 @@ bind -n C-\\ if-shell -F '#{==:#{session_name},scratch}' {
 bind C-p if-shell -F '#{==:#{session_name},scratch}' {
   detach-client
 } {
-  display-popup -BE -S fg=color0 -h 70% -w 70% -x C -y C "tmux new-session -A -s scratch"
+  display-popup -E -S fg=color0 -h 75% -w 75% -x C -y C "tmux new-session -A -s scratch"
 }
 
 # bind-key A display-popup -d '#{pane_current_path}' -xC -yC -w 80% -h 80% -E "htop"
