--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -50,14 +50,14 @@ set -g pane-border-style fg=color0
 
 set -g popup-border-lines single
 
-# name every tab as current directoy
+# name every window as current directoy
 set -g automatic-rename-format '#{b:pane_current_path}'
 
 set -w -g clock-mode-colour green
 
 set -g status-interval 1
-set -g status-position bottom #bottom #top
-set -g status-justify left
+set -g status-position bottom # bottom #top
+set -g status-justify left # absolute-centre
 set -g status-style "bg=default fg=colour7"
 set -g status-left " "
 set -g status-right-length 100
@@ -66,6 +66,7 @@ set -g status-right "#[fg=colour7]#[bg=default] #(~/.config/scripts/battery.sh) 
 
 set -g window-status-current-format "#[fg=white]#[bg=default]#W"
 set -g window-status-format "#[bg=default]#[fg=color240]#W"
+# set-window-option -g window-status-separator "#[fg=color2] • "
 
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
