--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -64,9 +64,16 @@ set -g status-right-length 100
 set -g status-right "#[fg=colour7]#[bg=default] #(~/.config/scripts/battery.sh) "
 # set -g status-right "#S #[fg=colour7]#[bg=default] #{network_bandwidth}#(~/.config/scripts/battery.sh) \uf0e7#[fg=colour7]  %d/%m #[fg=colour7] %H:%M:%S"
 
-set -g window-status-current-format "#[fg=white]#[bg=default]#W"
-set -g window-status-format "#[bg=default]#[fg=color240]#W"
+
+# set -g window-status-current-format "#[fg=white]#[bg=default]#W"
+# set -g window-status-format "#[bg=default]#[fg=color240]#W"
 # set-window-option -g window-status-separator "#[fg=color2] • "
+
+set -g window-status-format "•"
+set -g window-status-style "fg=color240"
+set -g window-status-current-format "•"
+set -g window-status-current-style "#{?window_zoomed_flag,fg=yellow,fg=white,nobold}"
+set -g window-status-bell-style "fg=red,nobold"
 
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
@@ -162,6 +169,10 @@ bind -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection
 bind -T copy-mode-vi 'C-v' send -X begin-selection \; send -X rectangle-toggle
+bind-key -T copy-mode-vi DoubleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-word"
+bind-key -T copy-mode-vi TripleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-line"
+bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-no-clear pbcopy
+unbind-key -T copy-mode-vi MouseDragEnd1Pane
 
 bind -n S-Left resize-pane -L 10
 bind -n S-Right resize-pane -R 10
@@ -185,7 +196,7 @@ bind C-n if-shell -F '#{==:#{session_name},org}' {
 # toggle session switcher popup
 bind C-s display-popup -BE -S fg=color0 -h 10% -w 100% -x 0% -y 100% "~/.config/scripts/tmux-sessions-popup.sh"
 
-bind -n C-\\ if-shell -F '#{==:#{session_name},scratch}' {
+bind C-\\ if-shell -F '#{==:#{session_name},scratch}' {
   detach-client
 } {
   display-popup -BE -S fg=color0 -h 35% -w 100% -x 0% -y 100% "tmux new-session -A -s scratch"
